[package]
name = "edon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_ast = { version = "0.22.0", features = ["transpiling"] }
deno_core = "0.187.0"
reqwest = { version = "0.11.18", features = ["json"]}
tokio = { version = "1.28.1", features = ["full"] }

